# spam

./: .env  .env.template  .gitignore  Cargo.toml  build.rs  prompt.txt
src/: main.rs  story.rs
web/: package-lock.json  package.json
web/src/: app.css  app.html  generate.ts
web/src/routes/: +page.svelte  Header.svelte  StoryEditor.svelte
