[package]
name = "spam"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde_json = "1.0.124"
actix-web-static-files = "4.0"
static-files = "0.2.1"
serde = { version = "1.0.206", features = ["derive"] }
dotenv = "0.15.0"

[build-dependencies]
static-files = "0.2.1"
serde = { version = "1.0.206", features = ["derive"] }
